# Vidnots

./: Dockerfile  LICENSE  README.md  docker-compose.yml  package.json
.github/workflows/: sync-to-hf.yml
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: LiveFeed.tsx  NotesViewer.tsx  ProgressRail.tsx
frontend/src/lib/: cache.ts  export.ts  sse.ts
genai/: Dockerfile  graph.py  main.py  pyproject.toml  requirements.txt  state.py
genai/agents/: _util.py  ocr_extractor.py  synthesizer.py  transcriber.py  visual_analyst.py
genai/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
genai/tools/: frames.py  youtube.py
